2008-05-17 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/mp3file.c (mp3_read_gapless):
	  - added assertion for track->userdata
	  - remove gapless data if file does not contain gapless data.

	* src/file_convert.c: read gapless data after conversion to MP3
	  files.
	
2008-05-11 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/misc_playlist.c: don't allow adding of playlists if iPod is
	  not loaded. Thanks to Andrea.

	* src/fileselection.c: use gtkpod_warning_simple() instead of
	  error_dialog() -- reducing code. Thanks to Andrea.

2008-05-05 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* data/gtkpod.glade: added lost handler to "create new
	playlist". Thanks to Andrea.

2008-05-01  Todd Zullinger <tmzullinger at users.sourceforge.net>

	* INSTALL
	  configure.in:
	  Require libgpod >= 0.6.1

2008-04-19 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_convert (conversion_convert_track): redirect stdout
          of conversion script to /dev/NULL.

	* data/gtkpod.glade (prefs_dialog): get rid of "Only
          'activatable' widgets can be packed into the action area of
          a GtkDialog" warning. Changes layouts of buttons at the
          bottom of the window slightly ("Revert" is now centered
          instead of being grouped on the right together with the
          "Close" button).

	* src/flacfile.c (flac_get_file_info): patch by Peter Pletcher
          supporting the DATE field (alternative source for YEAR),
          extended track and disc numbers ("n/m" format), as well as
          correction of an obvious type (CNDR -> CDNR). Thanks!

2008-04-18 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/fileselection.c: add multiple directories patch by Alex
          Pounds. Fixes bug that limited adding of directories to one
          at a time.

2008-04-13 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_photo.c (gphoto_is_photo_playlist,